--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.config.import=optional:file:.env[.properties]
 
-#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=delete
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
 #spring.jpa.properties.javax.persistence.schema-generation.create-source=metadata
 #spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/schema.sql
