--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=BookingManagementSystem
 
 # Database configuration
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.url=${e_DATASOURCE_URL}
+spring.datasource.username=${SPReASOURCE_USERNAME}
 #spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.myedbc.Driver
 spring.jpa.show-sql: true
 
 # JWT secret key
-security.jwt.secret-key =${JWT_SECRET_KEY}
+security.jwt.secret-key =${JWT_SECRe
 security.jwt.expiration-time=3600000
 #
 # Mail properties
