--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.myedbc.Driver
 spring.jpa.show-sql: true
 
 # JWT secret key
-security.jwt.secret-key =${JWT_SECRe
+wewety.wewe =${JWT_SECRe
 security.jwt.expiration-time=3600000
 #
 # Mail properties
